# ppf.datamatrix

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: tox.yml
docs/: CONTRIBUTING.md  README.md  README_pypi.md  RELEASE.md
docs/dev/: DEVDOCS.md  codecs.md  release-process.md
src/ppf/datamatrix/: __init__.py  codec_C40.py  codec_X12.py  codec_ascii.py  codec_common.py  codec_edifact.py  codec_text.py  datamatrix.py  utils.py
tests/: __init__.py  common.py  test_C40.py  test_X12.py  test_ascii.py  test_codec_common.py  test_common.py  test_consistency.py  test_datamatrix.py  test_datamatrix_encode.py  test_edifact.py  test_known_issues.py  test_smoke.py  test_text.py
