[metadata]
name = ppf-datamatrix
version = attr: ppf.datamatrix.__version__
description = Python port of https://github.com/datalog/datamatrix-svg
long_description = file: docs/README_pypi.md
long_description_content_type = text/markdown
url = https://github.com/adrianschlatter/ppf.datamatrix/tree/master
author = Adrian Schlatter
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Manufacturing
    Intended Audience :: Information Technology
    Intended Audience :: Other Audience
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Framework :: IPython
keywords = datamatrix, svg, python, ipython, codecs

[options]
package_dir = 
	= src
packages = find_namespace:
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
# List additional groups of dependencies here. You can install these using
# pip install -e .[dev,test]
test =
    flake8
    check-manifest
    pytest
    coverage
dev =
    tox
    twine

[check-manifest]
ignore =
    tox.ini
    tests
    tests/**
    docs/**

[flake8]
per-file-ignores =
    # imported but unused, import *, undefined name:
    __init__.py: F401, F403, F821
    # imported but unused: Needed due to side-effects of import:
    test_X12.py: F401
    test_C40.py: F401
    test_text.py: F401
    # bare except: We *are* trying to crash it:
    test_smoke.py: E722
filename =
    */src/*.py
    */docs/*.py
    */tests/*.py
    setup.py

[coverage:run]
command_line = -m pytest
branch = True

[coverage:report]
omit = tests/*

